# edt-rag

./: README.md  environment.yml  pyproject.toml
data/raw/: movies.txt
notebooks/: 01_js_embeddings.ipynb
